<resources>
    <string name="app_name">MaraSongs</string>
    <string name="psSarviceUri">.MusicService</string>
    <string name="content_str">com.hijiyam_koubou.marasongs</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3146425308522831/2530772303</string>
    <string name="banner_ad_unit_id2" translatable="false">ca-app-pub-3146425308522831/9367015102</string>
    <string name="banner_test_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="nend_apiKey" translatable="false">69d09f7ffa1c07bf80b8b2b593b5a95d9462abbb</string>
    <string name="nend_spotID" translatable="false">472676</string>
    <string name="nend_ly_apiKey" translatable="false">54cc422b3a564b092538ebe5b4776eacadc7432a</string>
    <string name="nend_ly_spotID" translatable="false">542881</string>
    <string name="permission_titol">利用を許可して下さい</string>
    <string name="permission_msg">このアプリは以下の機能を使います。\n(1)音楽ファイルやサムネイルを表示する為のファイルアクセス権限\n(2)bluetoothなどの接続\n\n許可頂けない場合はアプリを終了します。</string>
    <string name="permission_file_titol">ファイルアクセスを許可して下さい</string>
    <string name="permission_file_msg">音楽ファイルを再生するためのファイルアクセス権限を与えて下さい。</string>
    <string name="artist_reW_file">artist_rw.db</string>
    <string name="artist_reW_table">artist_rw_table</string>
    <string name="a_WSepalater"> >> </string>
    <string name="aaWSepalater"> ;; </string>
    <string name="kari_artist_file">kari_artist.db</string>
    <string name="artist_file">artist.db</string>
    <string name="artist_table">artist_table</string>
    <string name="album_file">album.db</string>
    <string name="album_table">album_table</string>
    <string name="kari_file">kari.db</string>
    <string name="zenkyoku_file">zenkyoku.db</string>
    <string name="zenkyoku_table">zenkyoku_table</string>
    <string name="shyuusei_file">shyuusei.db</string>
    <string name="shyuusei_table">shyuusei_table</string>
    <string name="all_songs_file_name">全曲リスト</string>
    <string name="album_artist_file_name">album_artist.txt</string>
    <string name="rewind">Rewind</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="skip">Skip</string>
    <string name="comon_ari">有り</string>
    <string name="comon_nasi">無し</string>
    <string name="comon_suru">する</string>
    <string name="comon_sinai">しない</string>
    <string name="common_kakikomi">書込み</string>
    <string name="common_reading">読込み</string>
    <string name="comon_kyoku">曲</string>
    <string name="comon_kyokume">曲目</string>
    <string name="comon_jikkou">実行</string>
    <string name="comon_sakusei">作成</string>
    <string name="comon_kousinn">更新</string>
    <string name="comon_jyunnbi">準備</string>
    <string name="common_sansyou">参照</string>
    <string name="common_yomitori">読み込み</string>
    <string name="comon_zennkyoku_saisei">全曲再生</string>
    <string name="comon_seisaku">制作</string>
    <string name="comon_nen">年</string>
    <string name="comon_ken">件</string>
    <string name="comon_syorijikann">処理時間</string>
    <string name="comon_curejitto">クレジットアーティスト</string>
    <string name="comon_ninyuu">人中</string>
    <string name="comon_nin">人</string>
    <string name="comon_kencyuu">件中</string>
    <string name="comon_kyokucyuu">曲中</string>
    <string name="comon_keturaku">欠落</string>
    <string name="comon_keturaku_nasi">欠落無し</string>
    <string name="comon_syoyoujikan">所要時間</string>
    <string name="comon_syori">処理</string>
    <string name="comon_zennkai">前回</string>
    <string name="comon_kakutei">確定</string>
    <string name="comon_kakuninn">確認</string>
    <string name="comon_kaisouka">階層化</string>
    <string name="comon_syuusei">修正</string>
    <string name="comon_henkou">変更</string>
    <string name="comon_sakujyo">削除</string>
    <string name="comon_cyusi">中止</string>
    <string name="comon_syorikaisi">処理開始</string>
    <string name="comon_album">アルバム</string>
    <string name="comon_saisei_ijyou">が読み込めませんでした。</string>
    <string name="comon_saisei_ijyou2">元ファイルが破損していたり、セキュリティ制限が行われている場合はご容赦ください。</string>
    <string name="comon_compilation0">さまざまなアーティスト</string>
    <string name="comon_compilation">コンピレーション</string>
    <string name="comon_compilation1">VARIOUS ARTISTS</string>
    <string name="comon_compilation2">Various Artists</string>
    <string name="comon_comp_sezu">など</string>
    <string name="comon_foluda">フォルダー</string>
    <string name="comon_sakuseicyuu">作成中</string>
    <string name="comon_karifile">仮ファイル</string>
    <string name="comon_hukusuu_Artist">複数のアーティストが収録されたアルバム</string>
    <string name="comon_matome">まとめ</string>
    <string name="comon_sakuseiyotei">グレーは作成予定</string>
    <string name="common_kakunincyuu">確認中</string>
    <string name="jyunbicyuu">準備中</string>
    <string name="common_syouryaku">省略</string>
    <string name="common_tuika">追加</string>
    <string name="comon_konkai">今回</string>
    <string name="comon_tuginohouji">次の表示は</string>
    <string name="comon_ni">に</string>
    <string name="comon_wo_tuika">を追加</string>
    <string name="comon_simple">シンプル</string>
    <string name="comon_syousai">詳細</string>
    <string name="comon_kara_mark">～</string>
    <string name="action_settings">Settings</string>
    <string name="n99">99</string>
    <string name="mm_ss">mm:ss 000</string>
    <string name="pp_artist">アーティスト</string>
    <string name="pp_mai">枚</string>
    <string name="pp_kyoku">曲</string>
    <string name="pp_zerozrozero">000</string>
    <string name="pp_keika">経過</string>
    <string name="pp_msec">[mS]</string>
    <string name="comon_nuKnow_artist">アーティスト情報なし</string>
    <string name="comon_nuKnow">不明</string>
    <string name="comon_nuKnow_album">アルバム情報なし</string>
    <string name="comon_syuuryousimasuka">終了しますか？</string>
    <string name="comon_tukau">使う</string>
    <string name="comon_tukawanai">使わない</string>
    <string name="common_artist_list">アーティストリスト</string>
    <string name="common_nitibun">日分</string>
    <string name="menu_func">機能</string>
    <string name="menu_item_randumplay">ランダム再生</string>
    <string name="menu_item_repeatplay">リピート再生</string>
    <string name="menu_item_sonota">その他</string>
    <string name="menu_item_sonota_settei">設定</string>
    <string name="menu_item_sonota_help">ヘルプ表示</string>
    <string name="menu_item_sonota_end">終了	</string>
    <string name="menu_list_allveiw">サムネイル付リスト表示</string>
    <string name="menu_item_plist_a_new">新規プレイリスト</string>
    <string name="menu_item_plist_rquest">リクエストリスト</string>
    <string name="menu_item_plist_zenkyoku_kousin">全曲リスト更新</string>
    <string name="menu_hihyoujiArtist">表示されていないアーティスト</string>
    <string name="menu_hihyoujiArtist_dt">選択したアーティスト名をそのままリストアップします</string>
    <string name="menu_syuusei_lisuto_hyouji">修正リスト表示</string>
    <string name="menu_m3uRead">汎用プレイリスト読み込み</string>
    <string name="menu_item_plist_saikin_tuika">最近追加リストの更新</string>
    <string name="menu_item_plist_saikin_tuika_dm">最近追加されたアルバムを何日前のものまで抽出するか選択して下さい</string>
    <string name="menu_item_plist_saikin_sisei">最近再生リストの更新</string>
    <string name="play_list_wr_msgi">を他のプレイヤーからも利用できる様にしています</string>
    <string name="m3uRead_mgs">読み込むプレイリストファイルを選択して下さい</string>
    <string name="list_contex_title">の操作</string>
    <string name="muqu_dlog_kenwo">件を</string>
    <string name="sentaku_wo_tudukeru">選択を続ける</string>
    <string name="list_contex_listup">リストアップ編集</string>
    <string name="list_contex_add_playlist">プレイリストに追加</string>
    <string name="list_contex_item_delete">削除</string>
    <string name="func_listup_titol">を選択したアーティストのアルバムとしてリストアップします</string>
    <string name="menu_funk_artistmei_msg">の扱い</string>
    <string name="menu_funk_artistmei1">のまま</string>
    <string name="menu_funk_artistmei2">他のアーティストに統合する</string>
    <string name="menu_funk_artistmei2msg">統合先を選択して下さい。</string>
    <string name="menu_funk_artistmei3">名称修正</string>
    <string name="menu_funk_artistmeiE">変更リストから削除</string>
    <string name="menu_funk_artistmei_sentaku">変更メニュー選択</string>
    <string name="le_ca_name">選択したアーティスト名に書換</string>
    <string name="func_listup_jyunbi_msg">アーティスト名と作曲者名をリストアップします</string>
    <string name="shyuuseiKakunit_dt">リストアップ先変更</string>
    <string name="shyuuseiuListStuusei_dm">リストアップ先</string>
    <string name="pref_player">プレイヤー設定</string>
    <string name="pref_pb_bgc_titol">プレイヤー色</string>
    <string name="pref_pb_bgc_bk">黒系</string>
    <string name="pref_pb_bgc_wh">白系</string>
    <string name="pref_list_simple_title">リスト表示</string>
    <string name="pref_list_simple_summaryOn">アイテムだけ</string>
    <string name="pref_list_simple_summaryOff">詳細表示</string>
    <string name="pref_main_file">main</string>
    <string name="pref_titol">設定</string>
    <string name="pref_gyapless">曲間隔時間のカット</string>
    <string name="pref_gyapless_msg">0 ... 1000[ms] (0=リッピングした状態/1000msで曲間隔無し)</string>
    <string name="pref_compBunki">コンピレーション設定</string>
    <string name="pref_compBunki_msg">コンピレーションと判断する曲数[%]はアルバムの</string>
    <string name="pref_list_artist_simple">アーティストリストの簡易表示</string>
    <string name="pref_list_simple">シンプルなリスト表示（サムネールなど省略）</string>
    <string name="pref_kisyubetu">機種別調整</string>
    <string name="pref_notifplayer">ノティフィケーションプレイヤー</string>
    <string name="pref_lockscreen">ロックスクリーンプレイヤー</string>
    <string name="pref_bt_renkei_titol"> Bluetooth連携</string>
    <string name="pref_cyakusinn_fukki">通話連携</string>
    <string name="pref_titol_plist_saikin_sisei">最近再生リストへの登録設定</string>
    <string name="pref_msg_plist_saikin_sisei">登録曲数</string>
    <string name="pref_titol_plist_artist_bunnri">アーティストリストの分離</string>
    <string name="pref_msg_plist_artist_bunnri">この曲数を超えたらアーティストリストを1画面目、2画面目アルバムとタイトルリストを階層化して読み込みを高速化します。</string>
    <string name="pref_titol_plist_saikin_tuika">最近追加リストへの登録設定</string>
    <string name="pref_msg_plist_saikin_tuika">抽出日数</string>
    <string name="pref_saisei">レジューム再生情報</string>
    <string name="pref_data_url">再生中のファイル名</string>
    <string name="pref_sonota">その他の設定</string>
    <string name="pref_reset_msg">このダイアログを閉じた時、初期化します。\n(異常動作が収まらない時の処置です。本当に消去して構いませんか？)</string>
    <string name="pref_reset">設定初期化</string>
    <string name="pref_listup_reset">調整リストのリセット</string>
    <string name="fie_albam_artist_name">（リストアップする）アーティスト名</string>
    <string name="fie_credit_artist_name">（アルバムに表記されている）アーティスト名</string>
    <string name="fie_albam_name">アルバム名</string>
    <string name="fie_year">(制作もしくは録音)年</string>
    <string name="fie_taisyou_folder">対象フォルダ</string>
    <string name="fie_taisyou_titol">タイトル</string>
    <string name="fie_sousa_tisyou">操作対象</string>
    <string name="playlist_namae_saikinsisei">最近再生</string>
    <string name="pref_playlist">プレイリスト</string>
    <string name="list_contex_del_playlist">リストを削除</string>
    <string name="list_contex_rename_playlist">リスト名変更</string>
    <string name="menu_list_simple">シンプル表示に切替</string>
    <string name="menu_list_syousai">詳細表示に切替</string>
    <string name="pref_rundam_list_size">ランダム再生の設定曲数</string>
    <string name="pref_rundam_list_size_dm">ランダム再生用にリストアップする曲数を設定してください。</string>
    <string name="pref_nitenkan">二点間再生中</string>
    <string name="pref_nitenkan_start_dt">二点間再生開始点</string>
    <string name="pref_nitenkan_end_dt">二点間再生終了点</string>
    <string name="repeate_dt_nitenkan">二点間再生</string>
    <string name="menu_item_repeatplay_kaijo">二点間再生解除</string>
    <string name="comon_kaisi">開始</string>
    <string name="comon_syuuryou">終了</string>
    <string name="menu_list_request_reset">リクエストリセット</string>
    <string name="menu_item_tone">音質調整</string>
    <string name="tone_level_nom">合計レベル調整</string>
    <string name="tone_level_sum">レベル合計</string>
    <string name="effect_bassbost">BassBoost</string>
    <string name="effect_reverb">リバーブ</string>
    <string name="pref_effect">サウンドエフェクト</string>
    <string name="pref_effect_vi">ビジュアライザー</string>
</resources>