<?xml version="1.0" encoding="utf-8"?>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="right"
	    android:layout_marginRight="5dp"
	    android:gravity="right"
	    android:orientation="horizontal"
	    tools:context=".MuList$CustomAdapter" >

		<ToggleButton
		    android:id="@+id/td_bb_tb"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="bottom"
		    android:layout_marginLeft="5dp"
		    android:layout_marginRight="5dp"
		    android:layout_weight="1"
		    android:text="@string/effect_bassbost"
		    android:textOff="@string/effect_bassbost"
		    android:textOn="@string/effect_bassbost" />

		<Button
		    android:id="@+id/td_lev_nom_bt"
		    style="?android:attr/buttonStyleSmall"
		    android:layout_width="wrap_content"
		    android:layout_height="match_parent"
		    android:layout_weight="1"
		    android:text="@string/tone_level_nom" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/tone_level_sum"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/td_vol_sum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:gravity="right"
                android:text="0"
                android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>